Module C complet: Paiement + FactureService (commission configurable, PDF stylé, téléchargement/impression) - testé end-to-end